force-app/main/default/objects/Diagnostic_Config__mdt/Diagnostic_Config__mdt.object-meta.xml
<CustomObject>
    <label>Diagnostic Config</label>
    <pluralLabel>Diagnostic Configs</pluralLabel>
</CustomObject>