force-app/main/default/objects/Diagnostic_Config__mdt/fields/API_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>API_Timeout_Seconds__c</fullName>
    <label>API Timeout Seconds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>