force-app/main/default/objects/Diagnostic_Config__mdt/fields/Cache_Refresh_Hours__c.field-meta.xml
<CustomField>
    <fullName>Cache_Refresh_Hours__c</fullName>
    <label>Cache Refresh Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>