force-app/main/default/objects/Diagnostic_Config__mdt/fields/Enable_Flow_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Enable_Flow_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Flow Analysis</label>
    <type>Checkbox</type>
</CustomField>