force-app/main/default/objects/Diagnostic_Config__mdt/fields/Enable_Trigger_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Enable_Trigger_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Trigger Analysis</label>
    <type>Checkbox</type>
</CustomField>