force-app/main/default/objects/Diagnostic_Config__mdt/fields/Max_Audit_Trail_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Audit_Trail_Days__c</fullName>
    <label>Max Audit Trail Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>