force-app/main/default/objects/Diagnostic_Config__mdt/fields/Max_Results_Display__c.field-meta.xml
<CustomField>
    <fullName>Max_Results_Display__c</fullName>
    <label>Max Results Display</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>